# Mandelbrot-Renderer

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE_STATUS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  IMPLEMENTATION_PLAN.md  Makefile  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md  README.md  README_CN.md  README_CN_NEW.md  README_EN.md  UPDATE_CONFIRMATION.md  UPGRADE_SUMMARY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  mandelbrot_cuda_standalone.cu  package.json  quickstart.sh  test-wasm-local.sh
.github/workflows/: deploy.yml  docker-publish.yml
docs/: debug.html  index.html  mandelbrot.js  minimal.html  test-deployment.html  wasm-fractal-fixed.html  wasm-fractal.html
docs/wasm/: README.md  fractals.wasm
include/: burning_ship.hpp  julia.hpp  newton_fractal.hpp  render.hpp  render_cuda.hpp  render_omp.hpp
nginx/: nginx.conf
output/: README.md
scripts/: julia_demo.sh  make_video.py
server/: index.js  package-lock.json  package.json
src/: burning_ship.cpp  burning_ship_test.cpp  julia.cpp  julia_test.cpp  main.cpp  main_unified.cpp  newton_fractal.cpp  newton_fractal_test.cpp  render.cpp  render_api.cpp  render_cuda.cu  render_omp.cpp
wasm/: CMakeLists.txt  README.md  build.sh
wasm/src/: fractals_wasm.cpp
wasm/web/: fractal-wasm-interface.js  index.html
web/: CNAME  README.md  index.html  mandelbrot.js  test.html
web-wasm/: fractals.js
